--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "express": "^4.14.0",
-    "hbs": "^4.0.0"
+    "hbs": "^4.0.0",
+    "jquery": "^3.3.1",
+    "popper": "^1.0.1"
   }
 }
